fix module stub

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "bytefury/modules",
-  "description": "Crater Module Management Package",
+  "description": "Crater Module Management Packages",
   "keywords": [
     "modules",
     "laravel",
