update composer package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "bytefury/modules",
+  "name": "crater-invoice/modules",
   "description": "Crater Module Management Packages",
   "keywords": [
     "modules",
