--- a/composer.json
+++ b/composer.json
@@ -1,60 +1,60 @@
 {
-  "name": "crater-invoice/modules",
-  "description": "Crater Module Management Packages",
-  "keywords": [
-    "modules",
-    "laravel",
-    "module",
-    "rad",
-    "crater"
-  ],
-  "license": "MIT",
-  "require": {
-    "php": ">=7.3",
-    "ext-json": "*"
-  },
-  "require-dev": {
-    "phpunit/phpunit": "^8.5",
-    "mockery/mockery": "~1.0",
-    "orchestra/testbench": "^6.2",
-    "friendsofphp/php-cs-fixer": "^2.16",
-    "laravel/framework": "^8.0",
-    "spatie/phpunit-snapshot-assertions": "^2.1.0|^4.2",
-    "phpstan/phpstan": "^0.12.14"
-  },
-  "autoload": {
-    "psr-4": {
-      "Nwidart\\Modules\\": "src"
+    "name": "crater-invoice/modules",
+    "description": "Crater Module Management Package",
+    "keywords": [
+        "modules",
+        "laravel",
+        "module",
+        "rad",
+        "crater"
+    ],
+    "license": "MIT",
+    "require": {
+        "php": ">=7.3",
+        "ext-json": "*"
     },
-    "files": [
-      "src/helpers.php"
-    ]
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "Nwidart\\Modules\\Tests\\": "tests",
-      "Modules\\Recipe\\": "tests/stubs/valid/Recipe"
-    }
-  },
-  "extra": {
-    "laravel": {
-      "providers": [
-        "Nwidart\\Modules\\LaravelModulesServiceProvider"
-      ],
-      "aliases": {
-        "Module": "Nwidart\\Modules\\Facades\\Module"
-      }
+    "require-dev": {
+        "phpunit/phpunit": "^8.5",
+        "mockery/mockery": "~1.0",
+        "orchestra/testbench": "^6.2",
+        "friendsofphp/php-cs-fixer": "^2.16",
+        "laravel/framework": "^8.0",
+        "spatie/phpunit-snapshot-assertions": "^2.1.0|^4.2",
+        "phpstan/phpstan": "^0.12.14"
     },
-    "branch-alias": {
-      "dev-master": "8.0-dev"
-    }
-  },
-  "scripts": {
-    "update-snapshots": "./vendor/bin/phpunit --no-coverage -d --update-snapshots",
-    "test": "vendor/bin/phpunit",
-    "test-coverage": "vendor/bin/phpunit --debug --coverage-html coverage",
-    "pcf": "vendor/bin/php-cs-fixer fix --verbose"
-  },
-  "minimum-stability": "dev",
-  "prefer-stable": true
+    "autoload": {
+        "psr-4": {
+            "Nwidart\\Modules\\": "src"
+        },
+        "files": [
+            "src/helpers.php"
+        ]
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Nwidart\\Modules\\Tests\\": "tests",
+            "Modules\\Recipe\\": "tests/stubs/valid/Recipe"
+        }
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Nwidart\\Modules\\LaravelModulesServiceProvider"
+            ],
+            "aliases": {
+                "Module": "Nwidart\\Modules\\Facades\\Module"
+            }
+        },
+        "branch-alias": {
+            "dev-master": "8.0-dev"
+        }
+    },
+    "scripts": {
+        "update-snapshots": "./vendor/bin/phpunit --no-coverage -d --update-snapshots",
+        "test": "vendor/bin/phpunit",
+        "test-coverage": "vendor/bin/phpunit --debug --coverage-html coverage",
+        "pcf": "vendor/bin/php-cs-fixer fix --verbose"
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
